tests222/tests/test6.out
lli: <stdin>:1:1: error: expected top-level entity
line 1: variable a is not defined
^
